2003-09-30  Bernhard Held <bernhard@bernhardheld.de>

	* src/SDCCcse.c: fixed part of bug #814548

2003-09-28  Borut Razem <borut.razem@siol.net>

	* src/asm.c: rewrite of printILine() to use temporary file instead
	  a pipe
	* src/xa51/main.c: commented out declaration of int rewinds

2003-09-27  Erik Petrich <epetrich@ivorytower.norman.ok.us>

	* src/SDCCicode.c (geniCodeJumpTable): Fixed bug #813206

2003-09-26  Erik Petrich <epetrich@ivorytower.norman.ok.us>

	* src/SDCCdflow.c (computeDataFlow): Fixed bug #810746
	* src/asm.c (printILine): Fixed bug #811015

2003-09-22  Jesus Calvino-Fraga <jesusc@ece.ubc.ca>

	*link/z80/lklibr.c, as/mcs51/lklibr.c: Improved memory allocation and
	freeing.

2003-09-21  Erik Petrich <epetrich@ivorytower.norman.ok.us>

	* src/z80/gen.c (setupToPreserveCarry): Fixed bug #796955
	* src/z80/gen.c (setupPair, genMovePairPair): Fixed setupPair
	to correctly handle general case of AOP_PAIRPTR
	* src/z80/gen.c (aopGet, aopPut): Generalized AOP_PAIRPTR handling

2003-09-21  Erik Petrich <epetrich@ivorytower.norman.ok.us>

	* src/mcs51/ralloc.c (fillGaps),
	* src/ds390/ralloc.c (fillGaps): fixed bug #810093 (yet another
	register positioning bug)

2003-09-21  Bernhard Held <bernhard@bernhardheld.de>

	* device/lib/_fsdiv.c: replaced (1<<31) by (1ul<<31)

2003-09-19  Erik Petrich <epetrich@ivorytower.norman.ok.us>

	* src/mcs51/gen.c (loadDptrFromOperand, genFarPointerGet,
	genCodePointerGet, genGenPointerGet, genFarPointerSet,
	genGenPointerSet): handle AOP_DPTR correctly when loading dptr
	(ralloc doesn't intentionally do this now, but perhaps later)
	* src/mcs51/ralloc.c (serialRegAssign, fillGaps),
	* src/ds390/ralloc.c (serialRegAssign, fillGaps): fixed some
	register positioning bugs (Fixed bug #762602 and #795325)
	* src/SDCCicode.c (geniCodeDerefPtr): Track output class correctly
	(Fixed bug #808779)
	* src/z80/gen.c: increased _vemit2's buffer[] to handle long
	lines that --i-code-in-asm generates
